--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -16,6 +16,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/checked"
-        app:backgroundTint="#32BEA6"/>
+        app:backgroundTint="@android:color/holo_blue_dark"/>
 
 </android.support.design.widget.CoordinatorLayout>
