--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,16 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">?android:attr/colorPrimary</item>
+        <item name="colorAccent">@android:color/holo_blue_light</item>
+    </style>
+
+
+    <style name="RadioButtonError">
+        <item name="colorAccent">#E53935</item>
+    </style>
 </resources>
