--- a/app/src/main/res/layout-v21/unit_item_card.xml
+++ b/app/src/main/res/layout-v21/unit_item_card.xml
@@ -7,12 +7,12 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:elevation="2dp">
+    android:elevation="5dp">
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:elevation="15dp"
+        android:layout_height="116dp"
+        android:elevation="35dp"
         android:orientation="horizontal">
 
         <TextView
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:padding="8dp"
-            android:text="Unit"
+            android:text="Titulo: "
             android:textColor="#000000"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -46,8 +46,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Grammar:"
-            android:id="@+id/grammar_text"
+            android:text="Descripción: "
+            android:id="@+id/description_text"
             android:padding="8dp"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -55,38 +55,39 @@
             android:layout_below="@+id/title_text"/>
 
         <TextView
-            android:id="@+id/grammar"
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text=""
             android:textColor="#414141"
             android:textSize="16sp"
-            android:layout_toRightOf="@+id/vocabulary_text"
+            android:layout_toRightOf="@+id/description_text"
             android:layout_below="@+id/title_text"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vocabulary:"
-            android:id="@+id/vocabulary_text"
+            android:text="Autor:"
+            android:id="@+id/author_text"
             android:textColor="#000000"
             android:textStyle="bold"
             android:padding="8dp"
             android:textSize="16sp"
-            android:layout_below="@+id/grammar"/>
+            android:layout_below="@+id/description"/>
 
         <TextView
-            android:id="@+id/vocabulary"
+            android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text=""
             android:textColor="#414141"
             android:textSize="16sp"
-            android:layout_below="@+id/grammar"
-            android:layout_toRightOf="@+id/vocabulary_text"
+            android:layout_below="@+id/description"
+            android:layout_toRightOf="@+id/author_text"
             />
+
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
