--- a/app/src/main/res/layout/content_book.xml
+++ b/app/src/main/res/layout/content_book.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.BookActivity"
     tools:showIn="@layout/activity_book"
-    android:background="@color/bg_send_course">
+    android:background="@color/iron">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/book_recycler_view"
