--- a/app/src/main/res/layout/content_courses.xml
+++ b/app/src/main/res/layout/content_courses.xml
@@ -8,7 +8,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_courses"
     tools:context=".activity.CoursesActivity"
-    android:background="#bababa">
+    android:background="@color/iron">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
