--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -2,6 +2,7 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/iron"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,16 +17,24 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="56dp"
+        android:background="@color/white"
+        android:paddingTop="26dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/ic_usuario" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_matricula"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="0dp">
 
             <EditText
                 android:id="@+id/input_name"
@@ -55,6 +64,7 @@
             android:id="@+id/btn_enter"
             android:text="@string/label_enter_button"
             android:background="@color/colorPrimary"
+            android:textColor="@color/white"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -62,12 +72,7 @@
             android:padding="12dp"
             />
 
-        <ImageView app:srcCompat="@drawable/ic_box"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="24dp"
-            android:layout_gravity="center_horizontal"
-            android:contentDescription="@string/logo" />
+
 
     </LinearLayout>
 
