--- a/app/src/main/res/layout/questionary.xml
+++ b/app/src/main/res/layout/questionary.xml
@@ -3,49 +3,70 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/nopresentation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No. ejercicio"
-        android:textColor="@color/colorPrimary"
-        android:textSize="28sp"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
 
     <RelativeLayout
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:background="@color/iron"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="100dp"
         android:elevation="5dp"
         android:id="@+id/contentq"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imagePresentation"
-            android:layout_width="150dp"
-            android:layout_height="160dp"
-            android:layout_margin="10dp"
-            />
+
         <TextView
-            android:layout_toRightOf="@id/imagePresentation"
-            android:layout_toEndOf="@+id/imagePresentation"
-            android:id="@+id/infoPresentation"
+            android:id="@+id/infoquestionary"
+            android:layout_below="@id/contentq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:text="Information"
             android:textSize="20sp"/>
 
         <TextView
-            android:layout_below="@id/imagePresentation"
+            android:layout_below="@id/infoquestionary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:text="Information"
+            android:visibility="gone"
+            android:textSize="20sp"
+            android:id="@+id/qtv1"/>
+        <EditText
+            android:layout_below="@id/qtv1"
+            android:layout_marginRight="20dp"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:id="@+id/qet1"
+            android:theme="@style/AppTheme"/>
+
+        <TextView
+            android:layout_below="@id/qet1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:visibility="gone"
+            android:textSize="20sp"
+            android:id="@+id/qtv2"/>
+        <EditText
+
+            android:layout_below="@id/qtv2"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:id="@+id/qet2"/>
+
+        <TextView
+            android:layout_below="@id/qet2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -54,60 +75,28 @@
             android:text="Information"
             android:visibility="gone"
             android:textSize="20sp"
-            android:id="@+id/tv1"/>
+            android:id="@+id/qtv3"/>
         <EditText
-            android:layout_below="@id/tv1"
+            android:layout_below="@id/qtv3"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:visibility="gone"
             android:layout_height="wrap_content"
-            android:id="@+id/et1"/>
-
-        <TextView
-            android:layout_below="@id/et1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:visibility="gone"
-            android:textSize="20sp"
-            android:id="@+id/tv2"/>
-        <EditText
-
-            android:layout_below="@id/tv2"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            android:id="@+id/et2"/>
-
-        <TextView
-            android:layout_below="@id/et2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:text="Information"
-            android:visibility="gone"
-            android:textSize="20sp"
-            android:id="@+id/tv3"/>
-        <EditText
-            android:layout_below="@id/tv3"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            android:id="@+id/et3"/>
-
-
+            android:id="@+id/qet3"/>
 
     </RelativeLayout>
 
-
+    <TextView
+        android:id="@+id/noQuestionary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No. ejercicio"
+        android:textColor="@color/colorPrimary"
+        android:textSize="28sp"
+        android:layout_marginTop="19dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
