--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0000ff</color>
+    <color name="colorPrimary">#337ab7</color>
     <color name="colorPrimaryDark">#0000c8</color>
     <color name="colorAccent">#EA80FC</color>
     <color name="list_divider">#717171</color>
@@ -8,7 +8,10 @@
     <color name="bg_bubble_other">#698ed2</color>
     <color name="bg_chat_room">#a2a2b7</color>
     <color name="bg_send_course">#bababa</color>
-    <color name="iron">#CCCCCC</color>
+    <color name="iron">#E0E0E0</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#E53935</color>
+    <color name="red_backgroud">#FFCDD2</color>
     <color name="black_overlay">#66000000</color>
+    <color name="black">#000000</color>
 </resources>
