--- a/app/src/main/res/layout/multipleoptions.xml
+++ b/app/src/main/res/layout/multipleoptions.xml
@@ -47,18 +47,21 @@
                 android:id="@+id/ranswer1"
                 android:checked="true"
                 android:text=""
+                android:textSize="18sp"
                 android:onClick="onRadioButtonClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <RadioButton
                 android:id="@+id/ranswer2"
                 android:text=""
+                android:textSize="18sp"
                 android:onClick="onRadioButtonClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <RadioButton
                 android:id="@+id/ranswer3"
                 android:text=""
+                android:textSize="18sp"
                 android:onClick="onRadioButtonClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -72,12 +75,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No. ejercicio"
-        android:textSize="28sp"
         android:textColor="@color/colorPrimary"
-        android:elevation="2dp"
-        android:layout_marginTop="19dp"
+        android:textSize="28sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="35dp" />
 
 </RelativeLayout>
