--- a/app/src/main/res/layout/questionary.xml
+++ b/app/src/main/res/layout/questionary.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
@@ -20,7 +21,7 @@
             android:layout_below="@id/contentq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="0dp"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:text="Information"
@@ -94,9 +95,9 @@
         android:text="No. ejercicio"
         android:textColor="@color/colorPrimary"
         android:textSize="28sp"
-        android:layout_marginTop="19dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="35dp" />
 
 </RelativeLayout>
