Actualización compatible con  dispositivos android 4.1->

--- a/app/src/main/res/layout-v21/book_item_card.xml
+++ b/app/src/main/res/layout-v21/book_item_card.xml
@@ -19,8 +19,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:id="@+id/image"
-            android:padding="10dp"
-            android:src="@drawable/notebook"/>
+            android:padding="10dp" />
 
         <TextView
             android:id="@+id/title"
