--- a/app/src/main/res/layout-v21/unit_item_card.xml
+++ b/app/src/main/res/layout-v21/unit_item_card.xml
@@ -30,8 +30,8 @@
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
+            android:layout_height="40dp"
+            android:maxLines="2"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:paddingRight="8dp"
