--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -20,19 +20,21 @@
         android:background="@color/white"
         android:paddingTop="26dp"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingRight="24dp"
+        android:elevation="@dimen/cardview_default_elevation">
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
-            app:srcCompat="@drawable/ic_usuario" />
+            app:srcCompat="@drawable/ic_launcher" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_matricula"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="0dp">
 
@@ -40,6 +42,7 @@
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
                 android:inputType="number"
                 android:hint="@string/matricula" />
 
@@ -51,6 +54,7 @@
             android:id="@+id/input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
 
@@ -58,6 +62,7 @@
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
                 android:inputType="textPassword"
                 android:hint="@string/password" />
 
@@ -73,10 +78,12 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            />
+        />
 
 
 
     </LinearLayout>
 
 </RelativeLayout>
+
+
