--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,12 @@
     <color name="bg_chat_room">#a2a2b7</color>
     <color name="bg_send_course">#bababa</color>
     <color name="iron">#E0E0E0</color>
+    <color name="iron2">#eaeaea</color>
+    <color name="iron3">#EEEEEE</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#E53935</color>
     <color name="red_backgroud">#FFCDD2</color>
+    <color name="green_backgroud">#4CAF50</color>
     <color name="black_overlay">#66000000</color>
     <color name="black">#000000</color>
 </resources>
