--- a/app/src/main/res/layout/content_quiz.xml
+++ b/app/src/main/res/layout/content_quiz.xml
@@ -78,7 +78,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/nomultiple"
+                android:id="@+id/nomultiplequiz"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -108,7 +108,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginEnd="10dp"
-                    android:text="Information"
+                    android:text=""
                     android:textSize="20sp"/>
 
 
