--- a/app/src/main/res/layout-v21/book_item_card.xml
+++ b/app/src/main/res/layout-v21/book_item_card.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="Introducción al inglés conversacional"
+            android:text="Titulo"
             android:textColor="#000000"
             android:textSize="20sp"
             android:layout_toRightOf="@id/image"
