--- a/app/src/main/res/layout/book_items_card.xml
+++ b/app/src/main/res/layout/book_items_card.xml
@@ -16,8 +16,8 @@
         android:elevation="5dp">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:elevation="35dp"
             android:orientation="horizontal">
 
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="Introducción al inglés conversacional"
+                android:text="Titulo"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 android:layout_toRightOf="@id/image"/>
