--- a/app/src/main/res/layout/unit_items_card.xml
+++ b/app/src/main/res/layout/unit_items_card.xml
@@ -27,7 +27,7 @@
             android:maxLines="1"
             android:padding="8dp"
             android:text="Titulo: "
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="16sp"
             />
@@ -42,7 +42,7 @@
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
             android:text=""
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_toRightOf="@id/title_text"
@@ -54,7 +54,7 @@
             android:text="Descripción: "
             android:id="@+id/description_text"
             android:padding="8dp"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_below="@+id/title_text"/>
