--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -80,7 +80,14 @@
             android:padding="12dp"
         />
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="3dp"
+            android:text ="Version 2.03"
+            android:textSize="22px"
+            android:textColor="@color/colorPrimary"
+            />
 
     </LinearLayout>
 
